perf(p2p): add position revision throttling and optimize vehicle node request handling
- Introduce configurable throttling for vehicle position revision bumps to reduce cache thrashing, with UI controls and system properties for tick and movement thresholds.
- Refactor VehicleP2PService to improve ride request handling:
  - Increase request cache TTL and reoffer intervals for better stability.
  - Cache forwarded payloads to minimize repeated parsing/serialization.
  - Optimize open request cleanup and selection logic.
- Streamline TaxiAlgorithmP2PCollector and related classes for efficiency, reducing unnecessary collections and simplifying logic.
- Update UI to expose position revision throttle and minimum move controls.
- Add new system properties for overlay position revision throttling.